*end points done * jwt done * log done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #h2 db configs
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+#jwt
+jwt.secret = sachinnn999
