*swagger * readme changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,14 @@ api.animal.facts = https://cat-fact.herokuapp.com/facts/random
 #embed h2 db details
 spring.datasource.url=jdbc:h2:mem:sachinnnfactsapp
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.username=sachinnn
+spring.datasource.password=sachinnn123
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #h2 db configs
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 #jwt
-jwt.secret = sachinnn999
+jwt.secret = sachinnn123
+#swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui-custom.html
